Fixing my dumb mistake lmao
- Remove overflow clip in app.css and then in speaker.js add overflow hidden for the carousel no horiztonal scrollbar will not show up on both safari and google chrome

--- a/src/components/stylesheet/app.css
+++ b/src/components/stylesheet/app.css
@@ -39,8 +39,7 @@ body::before {
   display: flex;
   flex-direction: column;
   /* May have issues on mobile? html height is alt */
-  min-height: 100vh; 
-  overflow-x: clip;
+  min-height: 100vh;
 }
 
 .content {
